testsuite/tests/interpreter_errors/empty_stream_errors/head/test.out
error: Can't get head from an empty stream
script.lkql:4:15: in script.lkql
  4 | val _ = print(nil().head)
    |               ^^^^^^^^^^

